# UninaSoC

./: .gitignore  Makefile  settings.sh
config/axi_memory_map/: README.md  configuration.py  create_crossbar_config.py  create_linker_script.py  read_properties_impl.py  read_properties_wrapper.py  write_tcl.py
config/axi_memory_map/configs/: PoC_config.csv  config.csv
config/configs/embedded/: config_main_bus.csv
hw/units/custom_hls_dotprod/: custom_top_wrapper.sv  fetch_source.sh
hw/units/custom_hls_dotprod/assets/vmul_hls/: component.xml
hw/units/custom_hls_dotprod/assets/vmul_hls/drivers/krnl_vmul_v1_0/src/: CMakeLists.txt  Makefile  xkrnl_vmul.c  xkrnl_vmul.h  xkrnl_vmul_hw.h  xkrnl_vmul_linux.c  xkrnl_vmul_sinit.c
hw/xilinx/: Makefile
hw/xilinx/ips/common/xlnx_axi4_to_axilite_converter/: config.tcl
hw/xilinx/ips/common/xlnx_axi_32_clock_converter/: config.tcl
hw/xilinx/ips/common/xlnx_axi_64_clock_converter/: config.tcl
hw/xilinx/ips/xlnx_axi_crossbar/: config.tcl
hw/xilinx/ips/xlnx_blk_mem_gen/: config.tcl
hw/xilinx/make/: config.mk
hw/xilinx/rtl/: axi_clock_converter_wrapper.sv  ddr4_channel_wrapper.sv  mbus_buses.svinc  peripheral_bus.sv  rv_socket.sv  sys_master.sv  unina_soc_axi_pkg.sv  uninasoc.sv  uninasoc_axi.svh  uninasoc_mem.svh  uninasoc_pkg.sv  virtual_uart.sv
hw/xilinx/synth/constraints/: Nexys-A7-100T-Master.xdc
hw/xilinx/synth/tcl/: add_xilinx_sources.tcl  build_bitstream.tcl  jtag2axi_load_binary.tcl  jtag2axi_master_load_binary.tcl  open_hw_manager.tcl  program_bitstream.tcl
sw/src/PoC_jtag2axi/: compile.sh
(+47 files in other folders)
